# vulkan-ml-api

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.cache/clangd/index/: barrier_validation.c.20C9354F4E5E1813.idx  dispatch_validation.c.BA9FF67DA1607333.idx  feature_query.c.0912CBF2B0A7734D.idx  graph_validation.c.6A18D94685478A73.idx  internal.h.F48F82E9970FD464.idx  ml_dispatch.c.946437C313811A9D.idx  ml_graph.c.BB92BDAC7AE83946.idx  ml_primitives.c.5050D192AF3DB82A.idx  ml_session.c.2FCD7B24945738D7.idx  quickstart.c.3DB8EA347B590456.idx  session_validation.c.C56D96AF87BB9448.idx  tensor.c.9983E5DD6FAEC213.idx  tensor_barrier.c.52D3A91D5C8D1B03.idx  tensor_copy.c.035082A219CDD7EC.idx  tensor_validation.c.963DF0ECF127F01E.idx  tensor_view.c.555509A33B6236FC.idx  test_dag_validation.c.8B1EED1CAAB5A0F3.idx  test_descriptor_validation.c.7CA8BB966B0DD01A.idx  test_helpers.h.7BDD6E94E0A36C22.idx  test_ml_dispatch.c.251890427A187283.idx  test_ml_graph.c.C6880756C4EFCDA9.idx  test_ml_session.c.C700E64865C622BC.idx  test_oom.c.5A465330517451C2.idx  test_spirv_tensor.c.BBA10CFE12E39B2F.idx  test_synchronization.c.BF13BB37B5B23984.idx  test_tensor_copy.c.9BE7BCB25D4C93C3.idx  test_tensor_formats.c.F0A299D45087DABA.idx  test_tensor_lifecycle.c.FCE2CEAD0B5E848E.idx  test_tensor_view.c.046F463C7F64BEC5.idx  test_validation_coverage.c.E65C085E5BCC1DE3.idx  test_vuids.c.657364D0143A63BE.idx  vk_ml_validation.h.1B74BE7383FA88FB.idx  vulkan_ml_primitives.h.0AC3EC4781C91AF6.idx
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
cmake/: vk_ml_primitives.pc.in  vk_ml_primitivesConfig.cmake.in
docs/: developer-guide.md
examples/: quickstart.c
include/vulkan/: vulkan_ml_primitives.h
layers/validation/: barrier_validation.c  dispatch_validation.c  graph_validation.c  session_validation.c  tensor_validation.c  vk_ml_validation.h
spec/: VK_KHR_ml_primitives.adoc
specs/001-ml-primitives/: data-model.md  plan.md  quickstart.md  research.md  review-findings.md  spec.md  tasks.md  v1.0-readiness.plan.md
specs/001-ml-primitives/checklists/: requirements.md
specs/001-ml-primitives/contracts/: c-api.md  public-api.md
src/: feature_query.c  internal.h  ml_dispatch.c  ml_graph.c  ml_primitives.c  ml_session.c  tensor.c  tensor_barrier.c  tensor_copy.c  tensor_view.c
tests/cts/: test_helpers.h  test_ml_dispatch.c  test_ml_graph.c  test_ml_session.c  test_oom.c  test_spirv_tensor.c  test_synchronization.c  test_tensor_copy.c  test_tensor_formats.c  test_tensor_lifecycle.c  test_tensor_view.c
tests/unit/: test_dag_validation.c  test_descriptor_validation.c  test_validation_coverage.c
tests/validation/: test_vuids.c
